# grandma2-mcp

./: .env.template  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEDICATION.md  LICENSE  NOTICE  README.md  SESSION-HANDOVER.md  TERMS.md  pyproject.toml
doc/: branch-evolution-audit.md  cd-tree-mcp-tool-correlation-matrix.md  command-builders.md  list-fields-reference.md  list_fields_discovery.json  ma2-cd-tree-full.md  ma2-cd-tree_new.md  ma2-rights-matrix.json  market-research-appendix.md  monetization-strategy-audit.md  openspace-comparison-audit.md  responsibility-map.md  tool-surface-tiers.md  transcript-architecture-audit.md
docs/: CODEX-CONSISTENCY-PASS-HANDOVER.md
rag/: __init__.py
scripts/: audit_presets.py  bootstrap_console_users.py  categorize_tools.py  create_filter_library.py  demo.py  demo_skills.py  demo_skills_live.py  export_validate_presets.py  fix_presets.py  make_presets.py  probe_list_fields.py  rag_ingest_mcp_sdk.py  repatch_vipers_quantums.py  setup_viper_quantum_content.py  store_position_presets_interactive.py
src/: __init__.py  agent_bridge.py  agent_memory.py  auth.py  completions.py  console_state.py  context.py  credentials.py  elicitation.py  navigation.py  orchestrator.py  pool_name_index.py  prompt_parser.py  rights.py  sampling.py  server.py  server_orchestration_tools.py  session_manager.py  skill.py  skill_improver.py  subscriptions.py  task_decomposer.py  telemetry.py  telnet_client.py  tools.py  ui.py  vocab.py
tests/: __init__.py  conftest.py  test_agent_bridge.py  test_agent_executor.py  (+49 more)
(+106 files in other folders)
