[project]
name = "ma2-agent"
version = "1.0.0"
description = "AI agent for grandMA2 lighting consoles — 198 MCP tools via Telnet (fork of ma2-onPC-MCP)"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "drohi-r" }]
keywords = ["grandma2", "mcp", "lighting", "telnet", "dmx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: System :: Networking",
]
dependencies = [
    "beautifulsoup4>=4.12.0",
    "mcp>=1.21.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "telnetlib3>=2.0.8",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "mcp[cli]>=1.21.0",
]

[project.scripts]
ma2-agent = "src.server:main"

[project.urls]
Repository = "https://github.com/drohi-r/grandma2-mcp"
Issues = "https://github.com/drohi-r/grandma2-mcp/issues"
Upstream = "https://github.com/thisis-romar/ma2-onPC-MCP"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "SIM108"]

[tool.ruff.lint.isort]
known-first-party = ["src", "rag"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = false
